--- a/src/SQLiteRepository/SQLiteRepository.csproj
+++ b/src/SQLiteRepository/SQLiteRepository.csproj
@@ -12,9 +12,9 @@
     <Copyright></Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>SqLiteGenericRepository</PackageId>
-    <Version>1.0.4</Version>
-    <AssemblyVersion>1.0.0.4</AssemblyVersion>
-    <PackageReleaseNotes>added plain GetAll</PackageReleaseNotes>
+    <Version>1.0.5</Version>
+    <AssemblyVersion>1.0.0.5</AssemblyVersion>
+    <PackageReleaseNotes>added deletion of multiple entites/ids</PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Title>SqliteRepository</Title>
   </PropertyGroup>
