--- a/src/SQLiteRepository/SQLiteRepository.csproj
+++ b/src/SQLiteRepository/SQLiteRepository.csproj
@@ -12,9 +12,9 @@
     <Copyright></Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>SqLiteGenericRepository</PackageId>
-    <Version>1.0.6</Version>
-    <AssemblyVersion>1.0.0.6</AssemblyVersion>
-    <PackageReleaseNotes>fixed retrieving items by IEnumerable of TKey</PackageReleaseNotes>
+    <Version>1.0.7</Version>
+    <AssemblyVersion>1.0.0.7</AssemblyVersion>
+    <PackageReleaseNotes>fixed deleting items by IEnumerable of TEntity or TKey</PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Title>SqliteRepository</Title>
   </PropertyGroup>
